--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
                     <div class="effect-3"></div>
                 </div>
                 <div class="lyric">
-                    <p class="current">那么你和人们的不同就看你怎么活</p>
-                    <p>想象你等白发</p>
+                    <p class="current"></p>
+                    <p></p>
                 </div>
             </div>
             <div class="panel-lyrics">
